# hino9-django

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PROD_TESTING.md  README.md  TESTING.md  check_tests.sh  ddl.sql  docker-compose.yml  keybase.txt  manage.py  pyproject.toml  pytest.ini  test_with_postgres.sh
ainews/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
news/: admin.py  embedding_service.py  metrics.py  middleware.py  models.py  sitemaps.py  urls.py
news/management/commands/: flush_cache.py  refresh_tags.py  sync_tags.py
news/migrations/: 0001_initial.py  0002_simplify_tag_model.py  0003_news_remove_tag_parent.py  0004_add_tag_parent_field.py  0005_create_news_model.py  0006_create_articles_model.py
news/services/: __init__.py  search_service.py
news/templates/news/: news_detail.html  news_list.html  news_search.html  privacy_policy.html  tag_detail.html  tags_index.html  terms_conditions.html
news/tests/: README.md  __init__.py  test_base.py  test_integration.py  test_models.py  test_search.py  test_seo.py  test_sqlite_compatible.py  test_tags.py  test_urls.py  test_views.py
news/tests/sqlite/: __init__.py  test_smoke.py
news/views/: __init__.py  article_views.py  search_views.py  tag_views.py  utility_views.py
tests/: __init__.py
tests/e2e/: README.md  conftest.py  test_article_journey.py  test_back_scroll.py  test_mobile_menu.py  test_navigation.py  test_scroll_highlight.py  test_search_flows.py
theme/: urls.py  views.py
theme/templates/: 404.html  500.html  base.html
(+5 files in other folders)
